src/objects/Custom_Metadata_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Option 1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Option 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Text_Field__c</fullName>
        <label>Text Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Metadata Type</label>
    <pluralLabel>Custom Metadata Types</pluralLabel>
</CustomObject>